--- a/css/layout.css
+++ b/css/layout.css
@@ -332,85 +332,87 @@ ul#nav li.current a { color: #F06000; }
    border-radius: 3px 0 0 3px;
 }
 
-.photoshop {
-  	width: 60%;
-  	-moz-animation: photoshop 2s ease;
-  	-webkit-animation: photoshop 2s ease;
-}
-.illustrator {
-  	width: 55%;
-  	-moz-animation: illustrator 2s ease;
-  	-webkit-animation: illustrator 2s ease;
-}
-.wordpress {
-  	width: 50%;
-  	-moz-animation: wordpress 2s ease;
-  	-webkit-animation: wordpress 2s ease;
-}
-.css {
-  	width: 90%;
-  	-moz-animation: css 2s ease;
-  	-webkit-animation: css 2s ease;
-}
-.html5 {
+.C-language {
   	width: 80%;
-  	-moz-animation: html5 2s ease;
-  	-webkit-animation: html5 2s ease;
+  	-moz-animation: C-language 2s ease;
+  	-webkit-animation: C-language 2s ease;
 }
-.jquery {
-  	width: 50%;
-  	-moz-animation: jquery 2s ease;
-  	-webkit-animation: jquery 2s ease;
-}
-
-@-moz-keyframes photoshop {
-  0%   { width: 0px;  }
-  100% { width: 60%;  }
-}
-@-moz-keyframes illustrator {
-  0%   { width: 0px;  }
-  100% { width: 55%;  }
-}
-@-moz-keyframes wordpress {
-  0%   { width: 0px;  }
-  100% { width: 50%;  }
-}
-@-moz-keyframes css {
-  0%   { width: 0px;  }
-  100% { width: 90%;  }
-}
-@-moz-keyframes html5 {
+@-moz-keyframes C-language {
   0%   { width: 0px;  }
   100% { width: 80%;  }
 }
-@-moz-keyframes jquery {
-  0%   { width: 0px;  }
-  100% { width: 50%;  }
-}
-
-@-webkit-keyframes photoshop {
-  0%   { width: 0px;  }
-  100% { width: 60%;  }
-}
-@-webkit-keyframes illustrator {
-  0%   { width: 0px;  }
-  100% { width: 55%;  }
-}
-@-webkit-keyframes wordpress {
-  0%   { width: 0px;  }
-  100% { width: 50%;  }
-}
-@-webkit-keyframes css {
-  0%   { width: 0px;  }
-  100% { width: 90%;  }
-}
-@-webkit-keyframes html5 {
+@-webkit-keyframes C-language {
   0%   { width: 0px;  }
   100% { width: 80%;  }
 }
-@-webkit-keyframes jquery {
+
+.python {
+  	width: 70%;
+  	-moz-animation: python 2s ease;
+  	-webkit-animation: python 2s ease;
+}
+@-moz-keyframes python {
   0%   { width: 0px;  }
-  100% { width: 50%;  }
+  100% { width: 70%;  }
+}
+@-webkit-keyframes python {
+  0%   { width: 0px;  }
+  100% { width: 70%;  }
+}
+.SQL {
+  	width: 75%;
+  	-moz-animation: SQL 2s ease;
+  	-webkit-animation: SQL 2s ease;
+}
+@-moz-keyframes SQL {
+  0%   { width: 0px;  }
+  100% { width: 75%;  }
+}
+@-webkit-keyframes SQL {
+  0%   { width: 0px;  }
+  100% { width: 75%;  }
+}
+.UNIX {
+  	width: 80%;
+  	-moz-animation: UNIX 2s ease;
+  	-webkit-animation: UNIX 2s ease;
+}
+@-moz-keyframes UNIX {
+  0%   { width: 0px;  }
+  100% { width: 80%;  }
+}
+@-webkit-keyframes UNIX {
+  0%   { width: 0px;  }
+  100% { width: 80%;  }
+}
+
+.CI {
+  	width: 90%;
+  	-moz-animation: CI 2s ease;
+  	-webkit-animation: CI 2s ease;
+}
+@-moz-keyframes CI {
+  0%   { width: 0px;  }
+  100% { width: 90%;  }
+}
+@-webkit-keyframes CI {
+  0%   { width: 0px;  }
+  100% { width: 90%;  }
+}
+
+.socket {
+  	width: 60%;
+  	-moz-animation: socket 2s ease;
+  	-webkit-animation: socket 2s ease;
+}
+@-moz-keyframes socket {
+  0%   { width: 0px;  }
+  100% { width: 60%;  }
+}
+
+@-webkit-keyframes socket {
+  0%   { width: 0px;  }
+  100% { width: 60%;  }
 }
 
 /* ------------------------------------------------------------------ */
