--- a/css/layout.css
+++ b/css/layout.css
@@ -73,13 +73,14 @@ header .banner-text h1 span{
 }
 header .banner-text h3 {
    font: 18px/1.9em 'librebaskerville-regular', serif;
-   color: #A8A8A8;
+   color: #E6E6E6;
    margin: 0 auto;
    width: 70%;
    text-shadow: 0px 1px 2px rgba(0, 0, 0, .5);
 }
 header .banner-text h3 span,
 header .banner-text h3 a {
+   font: 18px/1.9em 'librebaskerville-bold', serif;
    color: #fff;
 }
 header .banner-text hr {
@@ -414,6 +415,52 @@ ul#nav li.current a { color: #F06000; }
   0%   { width: 0px;  }
   100% { width: 60%;  }
 }
+
+.photography {
+  	width: 80%;
+  	-moz-animation: socket 2s ease;
+  	-webkit-animation: socket 2s ease;
+}
+@-moz-keyframes socket {
+  0%   { width: 0px;  }
+  100% { width: 80%;  }
+}
+
+@-webkit-keyframes socket {
+  0%   { width: 0px;  }
+  100% { width: 80%;  }
+}
+
+.photoshop {
+  	width: 40%;
+  	-moz-animation: socket 2s ease;
+  	-webkit-animation: socket 2s ease;
+}
+@-moz-keyframes socket {
+  0%   { width: 0px;  }
+  100% { width: 40%;  }
+}
+
+@-webkit-keyframes socket {
+  0%   { width: 0px;  }
+  100% { width: 40%;  }
+}
+
+.lightroom {
+  	width: 60%;
+  	-moz-animation: socket 2s ease;
+  	-webkit-animation: socket 2s ease;
+}
+@-moz-keyframes lightroom {
+  0%   { width: 0px;  }
+  100% { width: 60%;  }
+}
+
+@-webkit-keyframes lightroom {
+  0%   { width: 0px;  }
+  100% { width: 60%;  }
+}
+
 
 /* ------------------------------------------------------------------ */
 /* e. Portfolio Section
